--- a/assets/css/plugins.css
+++ b/assets/css/plugins.css
@@ -17,7 +17,7 @@
 @import url("plugins/bootstrap-grid.min.css");
 
 /* == fontawesome == */
-@import url("plugins/fontawesome-all.min.css");
+/* @import url("plugins/fontawesome-all.min.css"); */
 
 /* == animate == */
 @import url("plugins/animate.css");
