--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3340,7 +3340,7 @@ body.hamburger-menu .header-top {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border: 2px solid #fff;
-  right: 50%;
+  right: 17%;
   top: 50%;
   margin-top: -23px;
   margin-right: -21px;
@@ -3897,7 +3897,7 @@ body.nav-active .header-top .header-container .menu-icon:hover .text-menu .text-
   height: 100vh;
   top: 0;
   right: 0;
-  left: 0;
+  left: auto;
   bottom: 0;
   opacity: 0;
   visibility: hidden;
@@ -6414,7 +6414,7 @@ body.nav-active .dsn-nav-bar .icon-m .menu-icon__line {
   background-color: #0d0d0d;
   max-width: 600px;
   padding: 80px;
-  left: 80px;
+  right: 80px;
   bottom: -80px;
 }
 
@@ -6736,10 +6736,10 @@ body.nav-active .dsn-nav-bar .icon-m .menu-icon__line {
 .intro-about .intro-content-text h2 {
   text-align: right;
   margin-bottom: 40px;
-  font-size: 42px;
-  font-weight: 800;
-  line-height: 1.2;
-  letter-spacing: 0.01em;
+  font-size: 65px;
+  font-weight: 700;
+  line-height: 110.5px;
+
 }
 
 .intro-about .intro-content-text h2.dsn-move-section:not([data-dsn-responsive]) {
@@ -6818,7 +6818,11 @@ body.nav-active .dsn-nav-bar .icon-m .menu-icon__line {
 .intro-about .intro-content-text p {
   max-width: 370px;
   margin-bottom: 30px;
-  letter-spacing: 0.4px;
+  letter-spacing: 1px;
+  font-size: 20px;
+  line-height: 29.3px;
+  font-weight: 700;
+  text-align: justify;
 }
 
 .intro-about .intro-content-text p[data-dsn-animate="animate"]>span {
@@ -6851,7 +6855,7 @@ body.nav-active .dsn-nav-bar .icon-m .menu-icon__line {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 100px;
+  /* padding: 100px; */
 }
 
 .intro-about .img-box img {
